# downtime-agents

./: .coverage  .env.example  AGENTS.md  Dockerfile  README.md  agent.py  config.py  curator.py  email_composer.py  models.py  observability.py  pyproject.toml  requirements.txt  scoring.py  sender.py  sentry_init.py
.devcontainer/: devcontainer.json
.github/workflows/: deploy.yml  run-daily.yml  send-digest.yml
docs/: README.md
email-agent/: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  agent.py  config.py  curator.py  email_composer.py  models.py  observability.py  requirements.txt  sender.py
email-agent/.github/workflows/: deploy.yml  send-digest.yml
event-agent/: .env.example  .gitignore  CONTRIBUTING.md  agent.py  models.py  requirements.txt  scoring.py
event-agent/.github/workflows/: deploy.yml
event-agent/fetchers/: __init__.py  allevents.py  eventbrite.py
fetchers/: __init__.py  allevents.py  eventbrite.py  facebook_events.py
tests/: test_email_agent.py  test_event_agent.py
